--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Soundcard-RFID - Code for decoding 125KHZ HID cards using your soundcard.
+Soundcard-RFID - Code for decoding 125KHZ RFID HID cards using your soundcard.
 
 Copyright(c) 2011 by Christopher Abad
 
